--- a/django_basico3/paginas/templates/sobre/sobre.html
+++ b/django_basico3/paginas/templates/sobre/sobre.html
@@ -1,3 +1,11 @@
 {%extends 'base.html'%}
+{% load static %}
 
-{%block conteudo%} SOBRE {%endblock%}
+{%block conteudo%}
+<p>SOBRE</p>
+
+<p>
+    <img src="{% static 'paginas/a.jpg' %}" style="width: 630px; height: auto">
+</p>
+
+{%endblock%}
